<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SocialManagerFragment" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/gradient_drawable"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="136dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="136dp"
            android:src="@drawable/ic_account_circle_white_24dp" />

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@null"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:hint="@string/hint"/>

        <TextView
            android:id="@+id/bioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@null"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/friendsButton"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/groupsButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/groupsButton"
            android:textSize="16sp" />

        <Button
            android:id="@+id/orgsButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/orgsButton"
            android:textSize="16sp" />

        <Button
            android:id="@+id/scheduleButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/hint"
            android:text="@string/scheduleButton"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>