<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friendsListParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true">

    <TextView
        android:id="@+id/friendListTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/friendListTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:id="@+id/friendsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/friendEntry"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|left|center_vertical"
                    android:maxLines="1"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/sendRequestButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/sendRequestButton"
                    android:textSize="8sp"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendListTitle">

        <Button
            android:id="@+id/viewPendingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/viewPendingButton" />

        <SearchView
            android:id="@+id/findFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:queryHint="@string/findFriendButton">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/findFriendButton"
                android:textSize="20sp" />
        </SearchView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>